# brave-core

./: DEPS  package.json
app/: brave_generated_resources.grd
browser/: BUILD.gn  brave_profile_prefs.cc
browser/net/: brave_static_redirect_network_delegate_helper.cc
browser/renderer_host/: brave_render_message_filter.cc  brave_render_message_filter.h
browser/ui/: BUILD.gn
browser/ui/webui/: brave_donate_ui.cc  (+2 more)
components/brave_rewards/donate/: BUILD.gn  brave_donate.tsx
components/brave_rewards/donate/actions/: donate_actions.ts
components/brave_rewards/donate/components/: siteBanner.tsx
components/brave_rewards/donate/constants/: donate_types.ts
components/brave_rewards/donate/reducers/: donate_reducer.ts
components/brave_sync/: controller_impl.cc
components/definitions/: rewards.d.ts  rewardsDonate.ts
components/resources/: brave_components_resources.grd
patches/: chrome-browser-chrome_content_browser_client.cc.patch  chrome-browser-component_updater-widevine_cdm_component_installer.cc.patch  chrome-browser-ui-page_info-page_info_ui.cc.patch  chrome-common-media-cdm_host_file_path.cc.patch  content-browser-media-cdm_registry_impl.cc.patch  content-browser-media-key_system_support_impl.cc.patch  content-browser-media-media_interface_proxy.cc.patch  content-renderer-media-media_interface_factory.cc.patch  media-blink-webcontentdecryptionmodule_impl.cc.patch  media-cdm-cdm_host_files.cc.patch  media-cdm-cdm_module.cc.patch  media-media_options.gni.patch  media-mojo-services-cdm_service.cc.patch
script/: chromium-rebase-l10n.py
test/: BUILD.gn
(+18 files in other folders)
